--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "packageManager": "pnpm@10.8.0",
   "devDependencies": {
+    "@eslint/js": "^9.24.0",
     "@faker-js/faker": "^9.6.0",
     "cypress": "^14.3.0"
   }
